# nlp_proj

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
resources/: features_exp.xlsx  pet_code.py
src/ssrisk/: __init__.py  __main__.py  cli.py  config.py  evaluation.py  pipeline.py  schemas.py
src/ssrisk/agents/: base.py  clinical.py  image_caption.py  motivation.py  personality.py  risk.py
src/ssrisk/data/: loader.py  schema.py  serialize.py  synthetic.py
src/ssrisk/llm/: __init__.py  anthropic_client.py  base.py  factory.py  mock.py  ollama_client.py  openai_client.py
src/ssrisk/prompts/: few_shot.py  system.py
tests/: test_pipeline.py
